--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,1 +1,3 @@
 <h3>Post Form</h3>
+
+it "displays a new post form that redirects to the index page, which then contains the submitted post's title and description" do
