--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,13 @@
 <h3>Post Form</h3>
 
+
+
+
 it "displays a new post form that redirects to the index page, which then contains the submitted post's title and description" do
+
+do
+    visit new_post_path
+    fill_in 'post_title', with: 'My post title'
+    fill_in 'post_description', with: 'My post description'
+ 
+    click_on 'Submit Post'
