Automatically backed up by Learn

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -20,3 +20,9 @@
 <!--    fill_in 'post_description', with: 'My post description'-->
  
 <!--    click_on 'Submit Post'-->
+
+<!--expect(page.current_path).to eq(posts_path)-->
+<!--    expect(page).to have_content('My post title')-->
+<!--    expect(page).to have_content('My post description')-->
+<!--  end-->
+<!--end-->
