--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -7,6 +7,8 @@
  
   <label>Post description:</label><br>
   <textarea id="post_description" name="post[description]"></textarea><br>
+  
+  <!--hidden field -->
  
   <input type="submit" value="Submit Post">
 </form>
