--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -9,6 +9,8 @@
   <textarea id="post_description" name="post[description]"></textarea><br>
   
   <!--hidden field -->
+  
+  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
  
   <input type="submit" value="Submit Post">
 </form>
