Automatically backed up by Learn

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -15,7 +15,7 @@
   <input type="submit" value="Submit Post">
 </form>
 
-<%= params.inspect %>
+<!--<%= params.inspect %>-->
 
 <!--it "displays a new post form that redirects to the index page, which then contains the submitted post's title and description" do-->
 
