--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,7 +3,7 @@
 <form action= "<%= posts_path %>" method = "POST">
   <!--redirects to posts vs. new + method so it knows we are submitting data via the POST HTTP verb-->
   
-  
+  <%= form_tag posts_path do %>
   <label>Post title:</label><br>
   <input type="text" id="post_title" name="post[title]"><br>
  
