--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -12,7 +12,7 @@
   
   <!--hidden field -->
   
- 
+  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
  
   <input type="submit" value="Submit Post">
 </form>
