--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
 <h3>Post Form</h3>
 
-<form action= "<%= posts_path %>" method = "POST">
+<!--<form action= "<%= posts_path %>" method = "POST">-->
   <!--redirects to posts vs. new + method so it knows we are submitting data via the POST HTTP verb-->
   
   <%= form_tag posts_path do %>
