Automatically backed up by Learn

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -9,8 +9,8 @@
   <!--<input type="text" id="post_title" name="post[title]"><br>-->
  
   <label>Post description:</label><br>
-  
-  <textarea id="post_description" name="post[description]"></textarea><br>
+   <%= text_area_tag :'post[description]' %><br>
+  <!--<textarea id="post_description" name="post[description]"></textarea><br>-->
   
   <!--hidden field -->
   
