Automatically backed up by Learn

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -11,7 +11,8 @@
   <label>Post description:</label><br>
    <%= text_area_tag :'post[description]' %><br>
    
-   
+  <%= submit_tag "Submit Post" %>
+<% end %>
    
   <!--<input type="text" id="post_title" name="post[title]"><br>-->
   <!--<textarea id="post_description" name="post[description]"></textarea><br>-->
